--- a/simple-todos/simple-todos.css
+++ b/simple-todos/simple-todos.css
@@ -97,6 +97,12 @@ li.checked .text {
   text-decoration: line-through;
 }
 
+form {
+	margin: 0 auto;
+	width:250px;
+	background: none;
+}
+
 li.private {
   background: #eee;
   border-color: #ddd;
@@ -123,4 +129,5 @@ header .hide-completed {
   .new-task input {
     padding-bottom: 5px;
   }
+  
 }
