--- a/simple-todos/prueba/prueba.css
+++ b/simple-todos/prueba/prueba.css
@@ -18,6 +18,7 @@
 
 }
 
+
 #chat{
   
   background-color:blue;
@@ -25,16 +26,38 @@
 }
 
 #fondo:hover{
+
  background-color: grey;
  width: 400px;
+
 }
 
 #menu{
- background-color: green;
+
  margin-right: 1146px;
+ margin-left: 2px;
+
 }
 
-.button{text-decoration:none; text-align:center; 
+#waiting_matches{
+ padding: 100px;
+ margin-right: 400px;
+ margin-left: 225px;
+ border: 2px solid black;
+ background: red;
+ border-radius: 4px;
+
+}
+
+.tamano {
+ width: 218px;
+ height: 40px;
+ color: #A0522D;
+}
+
+
+/*
+.btn btn-default{text-decoration:none; text-align:center; 
          padding:4px 50px; 
          border:groove 1px #473c06; 
          -webkit-border-radius:12px;
@@ -96,3 +119,4 @@
          -webkit-box-shadow:0px 0px 8px #a88e0c;  -moz-box-shadow: 0px 0px 8px #a88e0c;  box-shadow:0px 0px 8px #a88e0c;  
           
  }
+*/
