--- a/simple-todos/plataforma.css
+++ b/simple-todos/plataforma.css
@@ -78,67 +78,16 @@
  display: block;
 }
 
-/*
-.btn btn-default{text-decoration:none; text-align:center; 
-         padding:4px 50px; 
-         border:groove 1px #473c06; 
-         -webkit-border-radius:12px;
-         -moz-border-radius:12px; 
-         border-radius: 12px; 
-         font:18px "Times New Roman", Times, serif; 
-         font-weight:bold; 
-         color:#d3e8e8; 
-         background-color:#d9b832; 
-         background-image: -moz-linear-gradient(top, #d9b832 0%, #7a600c 100%); 
-         background-image: -webkit-linear-gradient(top, #d9b832 0%, #7a600c 100%); 
-         background-image: -o-linear-gradient(top, #d9b832 0%, #7a600c 100%); 
-         background-image: -ms-linear-gradient(top, #d9b832 0% ,#7a600c 100%); 
-         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7a600c', endColorstr='#7a600c',GradientType=0 ); 
-         background-image: linear-gradient(top, #d9b832 0% ,#7a600c 100%);   
-         -webkit-box-shadow:0px 0px 2px #bababa, inset 2px 2px 8px #ffffff; 
-         -moz-box-shadow: 0px 0px 2px #bababa,  inset 2px 2px 8px #ffffff;  
-         box-shadow:0px 0px 2px #bababa, inset 2px 2px 8px #ffffff;  
-          
-           -webkit-transition: background 0.6s ease-in;
-         -moz-transition:  background 0.6s ease-in;
-         -o-transition:  background 0.6s ease-in;
-         transition:  background 0.6s ease-in;}.button:hover{
-         padding:4px 50px; 
-         border:groove 1px #473c06; 
-         -webkit-border-radius:12px;
-         -moz-border-radius:12px; 
-         border-radius: 12px; 
-         font:18px "Times New Roman", Times, serif; 
-         font-weight:bold; 
-         color:#d3e8e8; 
-         background-color:#b89818; 
-         background-image: -moz-linear-gradient(top, #b89818 0%, #665313 100%); 
-         background-image: -webkit-linear-gradient(top, #b89818 0%, #665313 100%); 
-         background-image: -o-linear-gradient(top, #b89818 0%, #665313 100%); 
-         background-image: -ms-linear-gradient(top, #b89818 0% ,#665313 100%); 
-         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#665313', endColorstr='#665313',GradientType=0 ); 
-         background-image: linear-gradient(top, #b89818 0% ,#665313 100%);   
-         -webkit-box-shadow:0px 0px 2px #bababa, inset 2px 2px 8px #ffffff; 
-         -moz-box-shadow: 0px 0px 2px #bababa,  inset 2px 2px 8px #ffffff;  
-         box-shadow:0px 0px 2px #bababa, inset 2px 2px 8px #ffffff;  
-          
-         }.button:active{
-         padding:4px 50px; 
-         border:groove 1px #473c06; 
-         -webkit-border-radius:12px;
-         -moz-border-radius:12px; 
-         border-radius: 12px; 
-         font:18px "Times New Roman", Times, serif; 
-         font-weight:bold; 
-         color:#d3e8e8; 
-         background-color:#8f750b; 
-         background-image: -moz-linear-gradient(top, #8f750b 0%, #7a600c 100%); 
-         background-image: -webkit-linear-gradient(top, #8f750b 0%, #7a600c 100%); 
-         background-image: -o-linear-gradient(top, #8f750b 0%, #7a600c 100%); 
-         background-image: -ms-linear-gradient(top, #8f750b 0% ,#7a600c 100%); 
-         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7a600c', endColorstr='#7a600c',GradientType=0 ); 
-         background-image: linear-gradient(top, #8f750b 0% ,#7a600c 100%);   
-         -webkit-box-shadow:0px 0px 8px #a88e0c;  -moz-box-shadow: 0px 0px 8px #a88e0c;  box-shadow:0px 0px 8px #a88e0c;  
-          
- }
-*/
+#wait_start{
+ position:relative;
+ float: right;
+}
+
+#wait_cancel{
+ position:relative;
+ float: left;
+}
+
+#waiting_for_players{
+ padding: 30px
+}
