--- a/simple-todos/plataforma.css
+++ b/simple-todos/plataforma.css
@@ -4,11 +4,16 @@
   margin-left:200px;
   width:480px;
 }
+
 #messages {
-  float: left;
-  margin-top:5px;
-  margin-left:0px;
-  width:480px;
+	position: relative;
+	width: 250px;
+	top: 200px;
+	right: 1030px;
+	float:right;
+	margin-right: 2px;
+	color: black;
+	
 }
 /* Give canvas a background */
 
@@ -33,10 +38,8 @@
 }
 
 #menu{
-
- margin-right: 1146px;
- margin-left: 2px;
-
+ position: relative;
+ float: left;
 }
 
 #game_features{
@@ -51,10 +54,11 @@
 #waiting_matches{
  padding: 100px;
  margin-right: 400px;
- margin-left: 225px;
+ margin-left: 300px;
  border: 2px solid black;
  background: red;
  border-radius: 4px;
+
 }
 
 .play_game{
